--- a/formpractice.css
+++ b/formpractice.css
@@ -71,6 +71,14 @@ body {
 
 }
 
+.form-row input[type="text"]:invalid,
+.form-row input[type="email"]:invalid {
+    border: 1px solid #d55c5f;
+    color: #d55c5f;
+    box-shadow: none;
+
+}
+
 @media only screen and (min-width: 700px) {
     .speaker-form-header,
     .speaker-form {
@@ -98,4 +106,112 @@ body {
         padding-right: 20px;
     }
 
+    .legacy-form-row {
+        margin-bottom: 10px;
+    }
+
+    .legacy-form-row legend {
+        width: 120px;
+        text-align: right;
+        padding-right: 20px;
+    }
+
+    .legacy-form-row legend {
+        float: left;
+    }
+
+    .form-row .instructions {
+        margin-left: 120px;
+    }
+
+    .form-row .checkbox-label {
+        margin-left: 120px;
+        width: auto;
+    }
+
+   .form-row button {
+       margin-left: 120px;
+   }
+
 } 
+
+
+
+.legacy-form-row {
+    border: none;
+    margin-bottom: 40px;
+    /* Gets rid of the default fieldset styling */
+}
+
+.legacy-form-row legend {
+    margin-bottom: 15px;
+}
+
+.legacy-form-row .radio-label {
+    display: block;
+    font-size: 14px;
+    padding: 0 20px 0 10px;
+}
+
+.legacy-form-row input[type="radio"] {
+    margin-top: 2px;
+}
+
+.legacy-form-row .radio-label,
+.legacy-form-row input[type="radio"] {
+    float: left;
+}
+
+.form-row select {
+    width: 100%;
+    padding: 5px;
+    font-size: 14px; /* This won't work in Chrome or Safari */
+    -webkit-appearance: none; /* This will make it work */
+}
+
+.form-row textarea {
+    font-family: "Helvetica", "Arial", sans-serif;
+    font-size: 14px;
+
+    border: 1px solid #D6D9Dc;
+    border-radius: 3px;
+
+    min-height: 200px;
+    margin-bottom: 10px;
+    padding: 7px;
+    resize: none;
+}
+
+.form-row .instructions {
+    color: #999999;
+    font-size: 14px;
+    margin-bottom: 30px;
+}
+
+.form-row .checkbox-label {
+    margin-bottom: 0;
+}
+
+.form-row button {
+    font-size: 16px;
+    font-weight: bold;
+
+    color: #ffffff;
+    background-color: #5995da;
+
+    border: none;
+    border-radius: 3px;
+
+    padding: 10px 40px;
+    cursor: pointer:
+
+}
+
+.form-row button:hover {
+    background-color: #76aeed;
+
+}
+
+.form-row button:active {
+    background-color: #407fc7;
+}
